--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -13,7 +13,7 @@
         <LinearLayout
             android:id="@+id/rv_headers"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:background="@color/dark"
             android:paddingStart="12dp"
             android:paddingEnd="12dp"
@@ -23,72 +23,116 @@
             app:layout_constraintTop_toTopOf="parent"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/header_symbol"
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:layout_weight="15"
-                android:text="Symbol"
-                android:textAlignment="viewStart"
-                android:autoSizeTextType="uniform"
-                android:padding="1dp"/>
+                android:layout_weight="1"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/header_price"
+                <TextView
+                    android:id="@+id/header_symbol"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:padding="3dp"
+                    android:textAlignment="viewStart"
+                    android:text="Symbol"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/header_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:padding="3dp"
+                    android:textAlignment="viewStart"
+                    android:text="Name"
+                    android:textSize="10sp" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:layout_weight="20"
-                android:text="Price"
-                android:textAlignment="center"
-                android:autoSizeTextType="uniform"
-                android:padding="1dp" />
+                android:layout_weight="1"
+                android:gravity="end"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/header_change"
+                <TextView
+                    android:id="@+id/header_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:padding="3dp"
+                    android:textAlignment="viewEnd"
+                    android:text="Price"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/header_change"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:padding="3dp"
+                    android:textAlignment="viewEnd"
+                    android:text="24hr change"
+                    android:textSize="10sp" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:layout_weight="15"
-                android:text="%24hr"
-                android:textAlignment="center"
-                android:autoSizeTextType="uniform"
-                android:padding="1dp" />
+                android:layout_weight="1"
+                android:gravity="end"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/header_ath"
+                <TextView
+                    android:id="@+id/header_ath"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:padding="3dp"
+                    android:textAlignment="viewEnd"
+                    android:text="ATH"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/header_ath_change"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:padding="3dp"
+                    android:textAlignment="viewEnd"
+                    android:text="Change from ATH"
+                    android:textSize="10sp" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:layout_weight="20"
-                android:text="ATH"
-                android:textAlignment="center"
-                android:autoSizeTextType="uniform"
-                android:padding="1dp" />
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="end">
 
-            <TextView
-                android:id="@+id/header_volume"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:layout_weight="20"
-                android:text="Volume"
-                android:textAlignment="viewEnd"
-                android:autoSizeTextType="uniform"
-                android:padding="1dp" />
+                <TextView
+                    android:id="@+id/header_volume"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:padding="3dp"
+                    android:textAlignment="viewEnd"
+                    android:text="Volume"
+                    android:textSize="14sp" />
 
-            <TextView
-                android:id="@+id/header_mcap"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:layout_weight="20"
-                android:text="MCap"
-                android:textAlignment="viewEnd"
-                android:autoSizeTextType="uniform"
-                android:padding="1dp" />
-
+                <TextView
+                    android:id="@+id/header_mcap"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:padding="3dp"
+                    android:textAlignment="viewEnd"
+                    android:text="MCap"
+                    android:textSize="10sp" />
+            </LinearLayout>
         </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
